- fixes for running on Solaris (#214)
- xcode2: fixed naming of <dll> targets (Scott Bailey, #218)
- check for incorrect used of conditional <set> (#220)
- added support for multiple source files with the same name (#92)
- msvs2003prj, msvs2005prj: fixed to generate correct precompiled headers
  setting for auto vs. manual PCH creation
- fixed incorrect dependencies of the "install" target (#225)


Version 0.2.3
--------------

- removed support for C++ Builder X, it no longer exists and the format
  wasn't used by anyone in practice
- significantly improved Xcode format (Kevin Ollivier)
- fixed running bakefile_gen if the name of temporary directory contains spaces
- msvc6prj: use /pdb linker option to make the projects work when imported
  in MSVC7.1 (Scott Bailey, patch #1732354)
- msvs2005prj: added support for Pocket PC platform
- added support for MSVS2003 project files (based on patch by
  Aleksander Jaromin)
- Bakefile now generates files with output format's platform's default
  line endings; added --eol option to override this (based on patch by
  Francesco Montorsi)
- added envvar() convenience function for referencing environment variables
- added --wrap-output command line option for tweaking line-wrapping
  behavior (based on patch by Francesco Montorsi)
- bakefile_gen uses all available CPUs by default now; use explicit -j1
  flag to get the old behavior
- autoconf: fixed shared libraries sonames on NetBSD and OpenBSD
- added limited support for conditional variables dependent on other
  conditional variables based by Francesco Montorsi (previously, only
  dependency on options was possible)
- added "debug" level to the <echo> command
- deprecated <echo level="warning"> in favor of new <warning> command
- added XML Schema for FORMATS.bkmanifest and Bakefiles.bkgen files
- autoconf: check if install -d works (patch by Warren Young)
- dmars: always use -HP99 switch; made the value configurable (#160)